# simple-ai-knowledge-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: sources.yaml
data/evals/: tool_behavior_cases.json
data/sources/: fastapi_overview.md  local_rag_principles.md  qdrant_overview.md
scripts/: ensure_ollama.sh  ensure_uv.sh  start_embedding_service.sh  stop_embedding_service.sh  up_local_stack.sh
src/ai_ks/: agent.py  cli.py  config.py  embedding_service.py  embeddings.py  errors.py  evaluation.py  ingestion.py  main.py  observability.py  query.py  retrieval.py  validation.py
src/ai_ks/static/: app.css  app.js
src/ai_ks/templates/: chat.html
tests/: test_agent.py  test_cli.py  test_embedding_service.py  test_evaluation.py  test_health.py  test_ingestion.py  test_query.py  test_ui.py
